@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: lsearch.test,v 1.9 2003/02/11 21:54:48 hobbs Exp $
+# RCS: @(#) $Id: lsearch.test,v 1.10 2003/02/27 16:02:00 dkf Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -289,6 +289,10 @@ test lsearch-10.6 {binary search with offset} {
     }
     set res
 } [concat -1 -1 [lrange $increasingIntegers 2 end]]
+test lsearch-10.7 {offset searching with an empty list} {
+    # Stop bug #694232 from reocurring
+    lsearch -start 0 {} x
+} -1
 
 test lsearch-11.1 {negated searches} {
     lsearch -not {a a a b a a a} a
